fix: alignment of navbar components

--- a/client/src/assets/styles/footer.css
+++ b/client/src/assets/styles/footer.css
@@ -39,7 +39,7 @@
 }
 
 .logo {
-  height: 60px;
+  height: 50px;
 }
 
 .brand-name {
